fixed text overlap by adding some padding related to #205

--- a/resource/css/styles.css
+++ b/resource/css/styles.css
@@ -356,6 +356,7 @@ section {
   font-weight: bold;
   height: 40px;
   padding-left: 8px !important;
+  padding-right: 22px !important;
   box-shadow: none !important;
 }
   
@@ -1312,10 +1313,10 @@ ul.nav-tabs > li {
 .clear-search {
   color: #CCCCCC !important;
   font-size: 24px !important;
-  top: 3px;
+  top: 4px;
   cursor: pointer;
   position: absolute !important; 
-  right: 10px; 
+  right: 8px; 
   z-index: 9001;
 }
 
